# exchange-ews-thunderbird

./: .gitignore  README.md
src/calendarews/: .hgtags  ChangeLog  Makefile.in  README  install.rdf  jar.mn  moz.build
src/calendarews/src/: CalEwsCID.h  CalEwsCalendar.cpp  CalEwsCalendar.h  CalEwsCalendarACLEntry.cpp  CalEwsCalendarACLEntry.h  CalendarEwsModule.cpp  moz.build
src/contactews/: .hgtags  AUTHORS  ChangeLog  Makefile.in  README  contactews-packager.mk  install.rdf  jar.mn  moz.build
src/contactews/chrome/content/: addressingWidgetOverlay.js  addressingWidgetOverlay.xul
src/contactews/public/: IContactEwsAutoCompleteResult.idl  IContactEwsDirectory.idl  moz.build
src/contactews/src/: ContactEwsAutoCompleteResult.cpp  ContactEwsAutoCompleteResult.h  ContactEwsAutoCompleteSearch.cpp  ContactEwsAutoCompleteSearch.h  ContactEwsCID.h  ContactEwsDirectory.cpp  ContactEwsDirectory.h  ContactEwsDirectoryFactory.cpp  ContactEwsDirectoryFactory.h  ContactEwsModule.cpp  jsmn.c  moz.build  search_param_parse.cpp
src/mailews/: .hgignore  .hgtags  ChangeLog  Makefile.in  README  jar.mn  moz.build
src/mailews/libews/: .autotools  .cproject  .hgignore  .hgtags  .project  ChangeLog  Makefile.am  Makefile.in  configure  configure.ac
src/mailews/libews/autom4te.cache/: output.1  output.3  output.5  output.6  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
src/mailews/libews/ews/: Makefile.am  Makefile.in  NotificationService.h  NotificationService.wsdl  Services.h  Services.wsdl  ews.nsmap  ewsExchangeServiceBindingProxy.cpp  ewsExchangeServiceBindingProxy.h  ewsH.h  ewsStub.h  ewsn.nsmap  ewsnH.h  ewsnNotificationServiceBinding12Service.cpp  ewsnNotificationServiceBinding12Service.h  ewsnNotificationServiceBindingService.cpp  ewsnNotificationServiceBindingService.h  ewsnStub.h
src/mailews/libews/gsoap/: Makefile.am  Makefile.in  stdsoap2.cpp  stdsoap2.h
src/mailews/libews/src/: Makefile.am  Makefile.in  libews.cpp  libews.h  libews_c.cpp  libews_c_attachment.cpp  libews_c_autodiscover.cpp  libews_c_folder.cpp  libews_c_item.cpp  libews_c_subscribe.cpp  libews_c_subscribe_callback.h  libews_defs.h  libews_macros.h
src/mailews/libews/src/impl/: Makefile.am  Makefile.in  ews_attachment_gsoap_impl.cpp  ews_error_impl.cpp  ews_folder_gsoap_impl.cpp  ews_gsoap_notification_handler.cpp  ews_item_calendar_gsoap_impl.cpp  ews_item_contact_gsoap_impl.cpp  ews_item_gsoap_impl.cpp  ews_item_message_gsoap_impl.cpp  ews_item_task_gsoap_impl.cpp  ews_proxyinfo_impl.cpp  ews_push_notification_server.cpp  ews_push_notification_server.h  ews_recipient_gsoap_impl.cpp  ews_session_gsoap_impl.cpp  ews_subscription_gsoap_impl.cpp  libews_gsoap.h  libews_gsoap_defs.h  libews_gsoap_utils.cpp  libews_gsoap_utils.h  libews_impl_macros.h
src/mailews/libews/src/utils/: Event.h  Makefile.am  Makefile.in  curl_help.cpp  curl_help.h  duration.cpp  ews_list_stl.h  ews_string_stl.cpp  ews_string_stl.h  urlparser.cpp  urlparser.h
src/mailews/libews/test/: Makefile.am  Makefile.in  test_libews  test_libews.cpp
src/mailews/libews/vs/: libews.sln  libews.vcxproj  libews.vcxproj.filters
src/mailews/public/: IMailEwsCalendarItemCallback.idl  IMailEwsItemOp.idl  IMailEwsItemsCallback.idl  IMailEwsMsgFolder.idl  IMailEwsMsgIncomingServer.idl  IMailEwsService.idl  IMailEwsTaskCallback.idl  moz.build
src/mailews/res/: install.rdf
src/mailews/res/content/: AccountManagerOverlay.js  AccountManagerOverlay.xul  am-ewsauth.xul  am-ewsserver.js  am-ewsserver.xul  am-serverwithnoidentitiesOverlay.js  am-serverwithnoidentitiesOverlay.xul  ewsserver.js  ewsserver.xul  messengerOverlay.js  messengerOverlay.xul  newAccount.js  newAccount.xul
src/mailews/res/locale/en-US/: am-ewsauth.properties  am-ewsserver.properties  am-mailews.dtd  extension.dtd  extension.properties  prefwindow.dtd
src/mailews/src/: MailEwsAccountManagerExtensions.cpp  MailEwsAccountManagerExtensions.h  MailEwsAddCalendarItemTask.cpp  MailEwsAddCalendarItemTask.h  MailEwsAddTodoTask.cpp  MailEwsAddTodoTask.h  MailEwsCID.h  MailEwsCalendarUtils.h  MailEwsCommon.h  MailEwsConvertCalendarItemIdToUidTask.cpp  MailEwsConvertCalendarItemIdToUidTask.h  MailEwsCreateSubFolderTask.cpp  MailEwsCreateSubFolderTask.h  MailEwsDeleteCalendarItemTask.cpp  MailEwsDeleteCalendarItemTask.h  MailEwsDeleteFolderTask.cpp  MailEwsDeleteFolderTask.h  MailEwsDeleteItemsTask.cpp  MailEwsDeleteItemsTask.h  MailEwsErrorInfo.h  MailEwsGetFolderTask.cpp  MailEwsGetFolderTask.h  MailEwsIncomingServer.cpp  MailEwsIncomingServer.h  MailEwsItemOp.cpp  MailEwsItemOp.h  MailEwsItemTask.cpp  MailEwsItemTask.h  MailEwsItemsCallback.cpp  MailEwsItemsCallback.h  MailEwsLock.h  MailEwsLog.cpp  MailEwsLog.h  MailEwsMarkItemsReadTask.cpp  MailEwsMarkItemsReadTask.h  MailEwsModifyCalendarItemTask.cpp  MailEwsModifyCalendarItemTask.h  MailEwsModifyTodoTask.cpp  MailEwsModifyTodoTask.h  MailEwsModule.cpp  (+49 more)
src/mailews/src/base/: MimeHeaderParser.cpp  MimeHeaderParser.h  MsgDBFolderBase.cpp  MsgDBFolderBase.h  MsgFileStream.cpp  MsgFileStream.h  MsgI18N.cpp  MsgI18N.h  MsgIncomingServerBase.cpp  MsgIncomingServerBase.h  MsgKeyArray.cpp  MsgKeyArray.h  MsgKeySet.cpp  MsgKeySet.h  MsgLineStreamBuffer.cpp  MsgLineStreamBuffer.h  MsgMailNewsUrlBase.cpp  MsgMailNewsUrlBase.h  MsgProtocolBase.cpp  MsgProtocolBase.h  MsgUtils.cpp  MsgUtils.h  Services.cpp  Services.h
src/mailews/src/rfc3339/: rfc3339.cpp  rfc3339.h
src/mailews/src/smtp-proxy/: KLSmtp.cpp  MailSession.cpp  MailSession.h  Process.cpp  Process.h  globals.h  resource.h  stdafx.cpp  stdafx.h
